- Fixed spans not changing font colour when going to dark mode

--- a/webroot/css/main.less
+++ b/webroot/css/main.less
@@ -1007,7 +1007,27 @@ ul {
                 }
             }
 
-            &:before, a, span {
+            &+ li {
+                margin-left: -@distSixteen;
+                padding-left: (@distEight) + (@distSix);
+
+                &:before {
+                    border-radius: 0 100% 0 0;
+                    border-style: solid;
+                    border-width: 0px 0px 1px 1px;
+                    content: '';
+                    height: 21px;
+                    left: 5px;
+                    position: absolute;
+                    top: 3px;
+                    transform: rotate(45deg);
+                    transform-origin: center;
+                    transition: all @transitionSpeedFast linear;
+                    width: 21px;
+                }
+            }
+
+            &:before, a {
                 .background-border-color(rgba(255, 255, 255, 1), true, true, true);
             }
 
@@ -1028,24 +1048,8 @@ ul {
                 white-space: nowrap;
             }
 
-            &+ li {
-                margin-left: -@distSixteen;
-                padding-left: (@distEight) + (@distSix);
-
-                &:before {
-                    border-radius: 0 100% 0 0;
-                    border-style: solid;
-                    border-width: 0px 0px 1px 1px;
-                    content: '';
-                    height: 21px;
-                    left: 5px;
-                    position: absolute;
-                    top: 3px;
-                    transform: rotate(45deg);
-                    transform-origin: center;
-                    transition: all @transitionSpeedFast linear;
-                    width: 21px;
-                }
+            span {
+                .background-border-color(rgba(255, 255, 255, 1), true, true, true, true);
             }
         }
     }
